# DecSelfMask

./: .gitignore  README.md  a_create_dec_self_mask_sequences.sh  b_calculate_scores_unannotated_sequencial.sh  b_calculate_scores_unannotated_speedup.py  b_dec_self_mask_train.sh  c_sft.sh  cc_create_train_seq.py  d_classification_head.sh  d_train.py  d_train_one.sh  d_train_one_wrapper.sh  dec_self_mask_example.ipynb  f_train_crf_task_one_wrapper.sh  f_train_task.py  f_train_task.sh  h_train_class_over_unsup.py  h_train_one_class_per_item.sh  l_baselines_bert.py  l_baselines_bert.sh  pyproject.toml  requirements.txt
data/: targets_for_self_masking_example.txt
dec_self_mask/: __init__.py  _hf.py  classification_head.py  prompt.py  relevance.py  score_relevancy.py  sequences.py  sft.py  training.py
dec_self_mask/_classifier_training/: data.py  model.py
dec_self_mask/_training/: dataset.py  load_model.py  trainer.py
scripts/: calculate_relevance_scores.py  create_train_seq.py  dec_self_mask_train.py  sft_train_task.py  train_classification_head.py  train_classification_head_aggregate_results.py  train_classification_head_eval.py
src/: load_annotated_crf.py  mapper_tokens_to_span.py  plot_attention.py  prompt.py
src/classifier_training/: data.py  model.py
src/training/: config.py  dataset.py  evaluation_functions.py  load_model.py  trainer.py
train_configs/: accelerate.json  deepspeed_1.json  deepspeed_2.json  deepspeed_zero2.json
train_configs/DecSelfMask/: llama_1b.yaml
train_configs/admission_task/: unsup_qwen8B_crf_lora_only_mask_w_item.yaml
(+4 files in other folders)
