[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dec-self-mask"
version = "0.1.0"
description = "Programmatic workflows for DecSelfMask training"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dec_self_mask*", "src*"]
